--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.08.2022 07:22:40</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.08.2022 07:44:30</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -92,7 +92,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny jihocesky pstruh s citronem a kaparovym maslem, bramborovy salat s cuketami, zelenou cibulkou a majonezou 155</li><li>Italske citronove rizoto s platky cerstveho gravlaxu a koprovym pestem, salatek 179</li><li>Thajske hovezi massaman kari s kokosovym mlekem, arasidy, vonavym korenim, pecenymi paprikami, bramborami a zeleninou, jasminova ryze 155</li><li>Bramborove gnocchi s trhanou kachnou pecenou na korenove zelenine a zralou goudou, pikantni cuketove cukemono s prazenym sezamem 175</li><li>Pecene papriky a maslova dyne zapecene s bylinkami a goudou, korenena ryze s beluga cockou, okurkove tzatziki, salatek 155</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s krenovou omackou, stouchane brambory s creme fraiche, salatek z cervene repy 155</li><li>Peceny filet z cerstveho norskeho lososa a morskeho dasa s krenovou omackou, stouchane brambory s creme fraiche, salatek z cervene repy 185</li><li>Mojo – kubanske trhane veprove na pomerancich, pikantni cervene fazole, jasminova ryze, salatek 155</li><li>Grilovane medailonky z krutich prsou se svestkovou omackou, zeleninove birjany z basmati ryze, salatek 179</li><li>Burger z cervene cocky s cervenou repou, barbecue majoneza, ledovy salat s okurkou, rajcatovy dzem, pecene brambory, salatek {L} 155</li></ol>
 </td>
 </tr>
 </table>
