--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.08.2022 08:48:47</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.08.2022 09:11:16</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,35 @@
 <h5>Pátek, 19. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Žampionová smetanová</strong>
+<strong>Zelňačka</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Čevabčiči s vařeným bramborem a hořčicí</strong>
+<strong>Vepřová plec na houbách s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							143,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí stehno ,,GARAM MASALA” s kari rýží</strong>
+<strong>Jahodové knedlíky s tvarohem, máslem a cukrem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							141,-
+							125,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s tuňákem, vejcem a pečeným bramborem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							141,-
-						</span>
-</p>
-<p>
-<strong>TEPLÝ BUFET: pečeně brambory, Tilapie na grilované zelenině, zelenina, rýže, koleno</strong>
+<strong>TEPLÝ BUFET: pečený brambor, ryze, zelenina, kuřecí paličky, Tilapie se sušenými rajčaty</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: tzatziki, cizrnový s kořenovou zeleniny, kuskus s rajčaty a žampiony</strong>
+<strong>SALÁTY: cizrnový s tuňákem, vajíčkový se zeleninou, polníček</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
