--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.08.2022 10:15:31</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.08.2022 10:46:42</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -122,7 +122,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a balkanskym syrem, jasminova ryze, salatek 155</li><li>Wrap s lehce zauzenym cerstvym lososem, rajcetem a rimskym salatem, koprovo-krenova omacka, pecene brambory, salatek {L} 179</li><li>Palive a vonave goanske vindalu s veprovym masem, bramborami a cerstvym chilli, jasminova ryze, salatek 155</li><li>Spagety s nudlickami hoveziho chuck roll, pecenou letni zeleninou, jalapenos paprickami a zralou goudou {L} 175</li><li>Zapecene zampiony plnene gorgonzolou a ovcim syrem s listovym spenatem, stouchane brambory se zelenou cibulkou, salatek 155</li></ol>
+<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a balkanskym syrem, jasminova ryze, salatek 155</li><li>Wrap s lehce zauzenym cerstvym lososem, rajcetem a rimskym salatem, koprovo-krenova omacka, pecene brambory, salatek {L} 179</li><li>Palive a vonave goanske vindalu s veprovym masem, bramborami a cerstvym chilli, jasminova ryze, salatek 155</li><li>Spagety s nudlickami hoveziho chuck roll, pecenou letni zeleninou, jalapenos paprickami, pestem ze susenych rajcat a zralou goudou (L) 179</li><li>Zapecene zampiony plnene gorgonzolou a ovcim syrem s listovym spenatem, stouchane brambory se zelenou cibulkou, salatek 155</li></ol>
 </td>
 </tr>
 </table>
