--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.08.2022 08:55:55</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.08.2022 09:16:57</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -127,7 +127,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a balkanskym syrem, jasminova ryze, salatek 155</li><li>Wrap s lehce zauzenym cerstvym lososem, rajcetem a rimskym salatem, koprovo-krenova omacka, pecene brambory, salatek {L} 179</li><li>Palive a vonave goanske vindalu s veprovym masem, bramborami a cerstvym chilli, jasminova ryze, salatek 155</li><li>Spagety s nudlickami hoveziho chuck roll, pecenou letni zeleninou, jalapenos paprickami, pestem ze susenych rajcat a zralou goudou (L) 179</li><li>Zapecene zampiony plnene gorgonzolou a ovcim syrem s listovym spenatem, stouchane brambory se zelenou cibulkou, salatek 155</li></ol>
+<ol><li>Peceny cerstvy jihocesky pstruh s horcicnym maslem, stouchane brambory s porkem, salatek 155</li><li>Smazena cerstva tmava treska, stouchane brambory s porkem, salatek z cervene repy, citron {L} 179</li><li>Libanonsky wrap s opekanym hovezim masem, cibulkou a humusem, pecena chilli dyne, salatek {L} 155</li><li>Uzena koroptvi prsicka na luzku z pecenych cuket, pikanti fazole se zeleninou, salatek 179</li><li>Indicka zeleninova pakora {cizrnove smazenky – dyne, papriky, cibule}, korenena ryze, jogurtova rajta, salatek 155</li></ol>
 </td>
 </tr>
 </table>
